--- a/meta.yaml
+++ b/meta.yaml
@@ -20,7 +20,7 @@ requirements:
     - mono
     - doxygen
     - curl
-    - gcc # [linux]
+    - toolchain # [linux]
     - pthread-stubs # [linux]
     - swig # [linux]
     - icu # [linux]
@@ -31,7 +31,7 @@ requirements:
     - openjdk 8.*
     - mono
     - curl
-    - gcc # [linux]
+    - toolchain # [linux]
     - pthread-stubs # [linux]
     - swig # [linux]
     - icu # [linux]
